--- a/src/sections/Contact/ContactStyle.module.css
+++ b/src/sections/Contact/ContactStyle.module.css
@@ -53,7 +53,7 @@
   
   input[type='submit']:hover {
     transform: scale(1.05);
-    color: rgba(255, 255, 255, 0.25);
+    color: rgb(255, 255, 255);
   }
   
   input[type='submit']:active {
